--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">mobile app dev A test</string>
+    <string name="app_name">モバイルアプリ開発A</string>
 </resources>
